--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@ footer background: #2F303A;
     
     --header-idx: 10;
     --modal-idx: 100;
+    --modal-menu-idx: 1000;
+
+    --anim-prop: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Reset start */
 h1,h2,h3,h4,h5,h6,p {
@@ -309,6 +312,7 @@ body {
 
 .whatwedo-item {
     position: relative;
+    overflow: hidden;
 }
 
 .whatwedo-overlay {
@@ -317,11 +321,20 @@ body {
     width: 100%;
     bottom: 0;
     left: 0;
+    transform: translateY(100%);
+
 
     padding-top: 27px;
     padding-bottom: 27px;
     
     background-color: rgba(47, 48, 58, 0.8);
+    opacity: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.whatwedo-item:hover .whatwedo-overlay,
+.whatwedo-item:focus .whatwedo-overlay{
+    transform: translateY(0);
     opacity: 1;
 }
 
@@ -405,12 +418,14 @@ body {
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     color: #AFB1B8;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
 .client-link:focus {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
+    transform: scale(1.1);
 }
 
 .client-icon {
@@ -467,21 +482,26 @@ body {
 
 .img-wrapper {
     position: relative;
+    overflow: hidden;
 }
 
 .project-overlay {
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: start;
+    top: 0;
+    left: 0;
+
+    transform: translateY(100%);
+
     width: 100%;
     height: 100%;
-    left: 0;
-    top: 0;
     padding: 20px 24px;
     background-color: rgba(33, 150, 243, 0.9);
     overflow: auto;
     opacity: 0;
+
+    user-select: none;
+
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1), opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-description {
@@ -491,9 +511,10 @@ body {
     color: #FFFFFF;
 }
 
-.project-overlay:hover,
-.project-overlay:focus {
+.project-item:hover .project-overlay,
+.project-item:focus .project-overlay {
     opacity: 1;
+    transform: translateY(0);
 }
 
 .project-wrapper {
@@ -567,7 +588,7 @@ body {
 .mb20px {
     margin-bottom: 20px;
 }
-/* ----------MODAL---------------- */
+/* ----------MODAL WINDOW---------------- */
 .backdrop {
     position: fixed;
     top: 0;
@@ -580,6 +601,7 @@ body {
 
 .backdrop.is-hidden {
     opacity: 0;
+    visibility: 0;
     pointer-events: none;
 }
 
@@ -594,7 +616,13 @@ body {
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.backdrop.is-hidden .modal {
+    opacity: 0;
+    transform: translate(-50%, -70%);
 }
 
 .modal-close-btn {
@@ -613,3 +641,49 @@ body {
     background-color: #FFFFFF;
     cursor: pointer;
 }
+
+/* KEYFRAMES */
+
+@keyframes heartbeat {
+    from {
+      transform: scale(1);
+      transform-origin: center center;
+      animation-timing-function: ease-out;
+    }
+    10% {
+      transform: scale(0.94);
+      animation-timing-function: ease-in;
+    }
+    17% {
+      transform: scale(0.98);
+      animation-timing-function: ease-out;
+    }
+    33% {
+      transform: scale(0.91);
+      animation-timing-function: ease-in;
+    }
+    45% {
+      transform: scale(1);
+      animation-timing-function: ease-out;
+    }
+  }
+
+  @keyframes rotate-hor-center {
+    0% {
+      transform: rotateX(0);
+    }
+    100% {
+      transform: rotateX(-360deg);
+    }
+  }
+
+  /* ANIMATIONS */
+  .rotate-hor-center {
+	animation: rotate-hor-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+.heartbeat {
+	animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+  
