--- a/css/styles.css
+++ b/css/styles.css
@@ -642,6 +642,15 @@ body {
     cursor: pointer;
 }
 
+.modal-title {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(23/20);
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
 /* KEYFRAMES */
 
 @keyframes heartbeat {
