--- a/css/styles.css
+++ b/css/styles.css
@@ -556,6 +556,7 @@ body {
     display: flex;
     gap: 95px;
     align-items: baseline;
+    justify-content: space-between;
 }
 
 .footer-contacts {
@@ -588,6 +589,53 @@ body {
 .mb20px {
     margin-bottom: 20px;
 }
+/* FOOTER FORM */
+
+.form-sign-field {
+    display: flex;
+    gap: 12px;
+    position: relative;
+}
+
+.form-sign-label {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+
+    transform: translateY(-50%);
+    font-size: 16px;
+    line-height: calc(20/16);
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.form-sign-input {
+    width: 358px;
+    height: 50px;
+    padding: 15px ;
+
+    background-color: #2F303A;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    outline: 1px solid transparent;
+    outline-offset: -1px; 
+
+    font-size: 16px;
+    line-height: calc(20/16);
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+
+    transition: outline var(--anim-prop) transform var(--anim-prop);
+}
+
+.form-sign-input:focus {
+    outline: 1px solid #2196F3;
+}
+
+.form-sign-input:focus + .form-sign-label {
+    transform: translate(-70px, -50%);
+
+}
 /* ----------MODAL WINDOW---------------- */
 .backdrop {
     position: fixed;
@@ -613,6 +661,7 @@ body {
     
     width: 528px;
     height: 581px;
+    padding: 40px;
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -642,13 +691,131 @@ body {
     cursor: pointer;
 }
 
-.modal-title {
-    font-family: 'Roboto';
+.modal-close-btn:hover {
+    fill: var(--accent-color);
+}
+
+.modal-form-title {
+    margin-bottom: 12px;
     font-weight: 700;
     font-size: 20px;
     line-height: calc(23/20);
     text-align: center;
     letter-spacing: 0.03em;
+}
+/* --------FORM STYLES--------------*/
+.modal-form-group {
+    margin-bottom: 20px;    
+}
+
+.modal-form-label {
+    display: inline-block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em; 
+    color: var(--secondary-text-color);
+}
+
+.modal-form-wrapper {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.modal-form-field {
+    width: 100%;
+    padding: 10px;
+    padding-left: 40px;
+    border-radius: 5px;
+    border: 1px solid var(--primary-text-color);
+    outline: 1px solid transparent;
+    outline-offset: -1px;
+
+    transition: outline var(--anim-prop);
+}
+
+.modal-form-field:focus {
+    outline-color: var(--accent-color);
+}
+  
+.modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    
+    transform: translateY(-50%);
+    
+    display: inline-block;
+    transition: fill var(--anim-prop);
+}
+  
+.modal-form-field:focus ~ .modal-form-icon {
+    fill: var(--accent-color);
+}
+
+.modal-form-comment {
+    display: block;
+    width: 100%;
+    height: 120px;
+    padding: 16px 12px;
+    font-size: 12px;
+
+    resize: none;
+
+    border: 1px solid var(--primary-text-color);
+    border-radius: 4px;
+    outline: 1px solid transparent;
+    outline-offset: -1px;
+
+    transition: outline var(--anim-prop);
+}
+
+.modal-form-comment:focus {
+    outline-color: var(--accent-color);
+}
+
+.modal-form-agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+
+    margin-bottom: 30px;
+}
+
+.modal-form-checkbox {
+    appearance: none;
+    width: 16px;
+    height: 15px;
+
+    outline-offset: -2px;
+    outline: 2px solid transparent;
+    border: 2px solid var(--primary-text-color);
+    border-radius: 2px;
+}
+
+.modal-form-checkbox:checked {
+    outline-color: var(--accent-color);
+    background-color: var(--accent-color);
+    background-image: url("data:image/svg+xml,%3Csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+}
+
+.modal-form-agreement-desc {
+    font-size: 14px;
+    line-height: calc(24/14);
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+}
+
+.modal-form-agreement-link {
+    color: var(--accent-color);
+}
+
+.modal-form-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
 }
 
 /* KEYFRAMES */
@@ -694,5 +861,3 @@ body {
 .heartbeat {
 	animation: heartbeat 1.5s ease-in-out infinite both;
 }
-
-  
