--- a/css/styles.css
+++ b/css/styles.css
@@ -792,6 +792,10 @@ body {
     outline: 2px solid transparent;
     border: 2px solid var(--primary-text-color);
     border-radius: 2px;
+
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .modal-form-checkbox:checked {
